od6.0: Added Pseudo Relief attribute
Summary:
See D10850
Implementation of wish in OD-449

Test Plan: See D10850

Reviewers: helene

Reviewed By: helene

Differential Revision: https://phabricator.dgbes.com:8443/D10865

--- a/src/Attributes/CMakeLists.txt
+++ b/src/Attributes/CMakeLists.txt
@@ -28,6 +28,7 @@ set(OD_MODULE_SOURCES
 	prestackattrib.cc
 	positionattrib.cc
 	referenceattrib.cc
+	reliefattrib.cc
 	samplevalueattrib.cc
 	scalingattrib.cc
 	semblanceattrib.cc
