--- a/src/uiAttributes/CMakeLists.txt
+++ b/src/uiAttributes/CMakeLists.txt
@@ -48,6 +48,7 @@ set(OD_MODULE_SOURCES
 	uipositionattrib.cc
 	uiprestackattrib.cc
 	uireferenceattrib.cc
+	uireliefattrib.cc
 	uisamplevalueattrib.cc
 	uiscalingattrib.cc
 	uisemblanceattrib.cc
