[od6.0] Intelligent in-depth plane dragging functionality (OD-262)
Summary:
Implementation of intelligent mouse-to-dragger transfer function for
in-depth plane dragging of inl/crl/z-slice, random lines, and volumes.
(1) Slowly moving the mouse will force the dragger to shift by only one
inl/crl/z-step per (few) pixel(s), while moving it faster can have it
shifted by as many lines per pixel as OSG would do given the current
zoom and orientation in the 3-D scene. It offers the user high-precision
(re)positioning without the need to change to a suitable scene view first.
(2) Although indispensible in horizon interpretation workflows, in-depth
plane dragging at FRONTAL viewing angles was not possible at all. OSG
dragger behaviour is based on 3D scene co-ordinates of the mouse pointer,
which is highly non-linear at these angles. The OSG dragger did not move
or with huge steps, and forward or backward was unpredictable. Solved by
founding the dragger behaviour on the 2D screen co-ordinates of the mouse
pointer instead, for all cases where plane normal and camera direction
differ less than 10 degrees. The forward/backward behaviour for these
cases has been chosen to be consistent with dragger planes whose tops
are slightly tilted towards the viewer.
(3) Even at somewhat less frontal viewing angles, a probably failing model
inversion makes the OSG plane dragger jump back while the user keeps on
moving the mouse pointer in the original direction. Solved by detecting
this behaviour and switch (smoothly) to the same screen drag mode as
applied for frontal view in-depth plane dragging (see (2)).
(4) Missing random line status bar information during manipulation by a
plane dragger instead of a node dragger. Needed by the user in case of
high-precision (re)positioning.
(5) Bugfix: For whatever reason, inl/crl/z-slices did not/never snap
positions while dragging, while they do immediately afterwards. This
caused unsnapped positions to be diplayed in status bar, tree item and
slice

--- a/src/Algo/CMakeLists.txt
+++ b/src/Algo/CMakeLists.txt
@@ -42,6 +42,7 @@ set( OD_MODULE_SOURCES
 	delaunay3d.cc
 	extremefinder.cc
 	dippca.cc
+	dragcontroller.cc
 	fftfilter.cc
 	fourier.cc
 	fourierinterpol.cc
