od: class 'SyntheticData' is moved from WellAttrib module to Seis module.
Summary:
class 'SyntheticData' is moved from WellAttrib module to Seis module.
PreStackSyntheticData is moved to PreStackProcessing module

Test Plan:
Code compiled successfully.
Changed WellAttrib frame work.

Reviewers: satyaki, arnaud

Reviewed By: satyaki, arnaud

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D10840

--- a/src/PreStackProcessing/CMakeLists.txt
+++ b/src/PreStackProcessing/CMakeLists.txt
@@ -32,6 +32,7 @@ set(OD_MODULE_SOURCES
 	prestackprocessortransl.cc
 	prestackprop.cc
 	prestackstacker.cc
+	prestacksyntheticdata.cc
 	prestacktrimstatics.cc
 	semblancealgo.cc
 )
