--- a/src/Seis/CMakeLists.txt
+++ b/src/Seis/CMakeLists.txt
@@ -70,6 +70,8 @@ set(OD_MODULE_SOURCES
 	seistrctr.cc
 	seiswrite.cc
 	seiszaxisstretcher.cc
+	stratsynthgenparams.cc
+	syntheticdata.cc
 	synthseis.cc
 	timedepthconv.cc
 	wavelet.cc
