od : Inl/Crl/Zslice Tree Items management through PresentationManaged Layer
Summary:
New class SurveySectionPresentationInfo introduced to manage survey sections like Inl/Crl/Zslice/2DLine/RDl. SurveySectionPresentationInfo can have multiple layers on them called SectionLayerPresentationInfo which is factory managed. For now AttribPresentationInfo is added to manage attribute layers.

SurveySectionPresentationInfo has a unique ID assigned to a new SurveySection shown in any type of viewer. The synced TreeItems in other viewers would also have the same ID , hence having a common ID accross all types of viewers.

Change in PRManaged Tree Items : Instead of being managed by DBKey they are now managed via OD::ObjPresentationInfo

Test Plan: Adding/ Removing / Check on/off are working fine. Change of position etc have not been implemented yet.

Reviewers: bert

Reviewed By: bert

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D10888

--- a/src/AttributeEngine/CMakeLists.txt
+++ b/src/AttributeEngine/CMakeLists.txt
@@ -20,6 +20,7 @@ set(OD_MODULE_SOURCES
 		attribparambase.cc
 		attribposvecoutput.cc
 		attribprocessor.cc
+		attribpresentationinfo.cc
 		attribprovider.cc
 		attribsel.cc
 		attribslice.cc
