od: class RaySynthGenerator is moved from Seis to PreStackProcessing module. Test program 'synthseis.cc' is moved from Seis/tests to PreStackProcessing/tests
Summary: class RaySynthGenerator is moved to PreStackProcessing module. Because to support PreStack data in WellTie.

Test Plan: Code compiled sucessfully.

Reviewers: arnaud, satyaki

Reviewed By: satyaki

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D10943

--- a/src/PreStackProcessing/CMakeLists.txt
+++ b/src/PreStackProcessing/CMakeLists.txt
@@ -9,6 +9,7 @@ set(OD_MODULE_DEPS Velocity)
 set(OD_BATCH_TEST_PROGS
 	angle_computer.cc
 	mute.cc
+	synthseis.cc
 )
 set(OD_MODULE_SOURCES
 	initprestackprocessing.cc
@@ -34,6 +35,7 @@ set(OD_MODULE_SOURCES
 	prestackstacker.cc
 	prestacksyntheticdata.cc
 	prestacktrimstatics.cc
+	raysynthgenerator.cc
 	semblancealgo.cc
 )
 set(OD_MODULE_BATCHPROGS od_process_prestack.cc )
