od: Made histogram parameters to be saved to and read from .par file.
Summary: As all traces are processed while importing seismic data from simple files, cbvs files and SEG-Y files, it is better to extract histogram parameters then itself. But it is not possible to keep all the data in memory before extracting required parameters, so made a class which selects data values randomly. Used this class where ever it can be used. Also added a button in seismic manager to show histogram if the .par file has histogram parameters.

Test Plan: Tested by importing seismic data through various methods except through PetrelDirect. Jira Issue: https://jira.dgbes.com:8443/browse/OD-1103.

Reviewers: raman

Reviewed By: raman

Differential Revision: https://phabricator.dgbes.com:8443/D10951

--- a/src/Seis/CMakeLists.txt
+++ b/src/Seis/CMakeLists.txt
@@ -63,6 +63,7 @@ set(OD_MODULE_SOURCES
 	seisscanner.cc
 	seisselection.cc
 	seissingtrcproc.cc
+	seisstatinfo.cc
 	seisstor.cc
 	seistrc.cc
 	seistrcprop.cc
