Changed structure of survey change/edit No longer push and pop of surveys and DBMs Milestone for OD-1194

--- a/plugins/uiSEGY/CMakeLists.txt
+++ b/plugins/uiSEGY/CMakeLists.txt
@@ -33,6 +33,6 @@ set(OD_MODULE_SOURCES
     uiwellimpsegyvsp.cc
 )
 
-set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} ${OD_SURVEY_EXECS} )
 set( OD_MODULE_PROGS od_SEGYExaminer.cc )
 OD_INIT_MODULE()
