Added uiDataRootSel to just select a data root directory (but not set it) Not used yet, not tested yet.

--- a/src/uiIo/CMakeLists.txt
+++ b/src/uiIo/CMakeLists.txt
@@ -24,6 +24,7 @@ set( OD_MODULE_SOURCES
 	uidatapointsetman.cc
 	uidatapointsetmerger.cc
 	uidatapointsetcrossplotwin.cc
+	uidatarootsel.cc
 	uidpsaddcolumndlg.cc
 	uidpscrossplotpropdlg.cc
 	uidpscrossplottools.cc
