Survey Man: Clean-up of uiSurveyManager Made uiFixInvalidDataRoot class Implemented but not fully tested uiDataRootSel Made uiSelectFromList use uiString's

--- a/src/uiIo/CMakeLists.txt
+++ b/src/uiIo/CMakeLists.txt
@@ -33,6 +33,7 @@ set( OD_MODULE_SOURCES
 	uidpsselgrpdlg.cc
 	uidpsselectednessdlg.cc
 	uieditpdf.cc
+	uifixinvaliddataroot.cc
 	uigraphicslegend.cc
 	uigraphicsscalebar.cc
 	uiimppickset.cc
@@ -63,7 +64,6 @@ set( OD_MODULE_SOURCES
 	uiprobdenfuncman.cc
 	uiprobdenfunvarsel.cc
 	uirandomlineman.cc
-	uisetdatadir.cc
 	uiselobjothersurv.cc
 	uiselsurvranges.cc
 	uisrchprocfiles.cc
