Made File::Monitor work. Required using the 'glorious' MOC system ... (Turns out that Qt connects signals and slots via strings. The function names are stored in strings and converted to actual functions on runtime).

--- a/src/Basic/CMakeLists.txt
+++ b/src/Basic/CMakeLists.txt
@@ -22,6 +22,7 @@ endif()
 
 set( QT_MOC_HEADERS
 	qtimercomm.h
+	i_qfilesystemwatcher.h
 )
 
 configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/qpaths.cc.in ${CMAKE_CURRENT_BINARY_DIR}/qpaths.cc @ONLY )
