Turns out we can do without od_SelectObject

--- a/src/uiIo/CMakeLists.txt
+++ b/src/uiIo/CMakeLists.txt
@@ -76,7 +76,7 @@ set( OD_MODULE_SOURCES
 	inituiio.cc
 )
 
-set( OD_DATAROOT_UI_PROGRAMS od_Edit_Survey.cc od_Manage_Surveys.cc od_SelectObject.cc )
+set( OD_DATAROOT_UI_PROGRAMS od_Edit_Survey.cc od_Manage_Surveys.cc )
 
 if( WIN32 )
     set( OD_ELEVATED_PERMISSIONS_GUI_PROGS od_BatchHosts.cc )
