od : Introduction of Probe in Inl/Crl/Zslice
Summary:
1. Probe introduced as new object type, Manager & Translator added. Manager not saveable, Hence objects are temporary.
2. Implemented Probe in Plane Data Trees & 2D Viewer

Nect plan would be to separate the Probe related parts & create a base class out of it which could be used for 2D line, Rdl , Horizons etc

Fix for lint error

Test Plan: Initial things like adding & moving working needs more test

Reviewers: raman, bert

Reviewed By: bert

Differential Revision: https://phabricator.dgbes.com:8443/D10990

--- a/src/General/CMakeLists.txt
+++ b/src/General/CMakeLists.txt
@@ -73,6 +73,9 @@ list ( APPEND OD_MODULE_SOURCES
 	posidxpairvalset.cc
 	posinfodetector.cc
 	posvecdataset.cc
+	probe.cc
+	probetr.cc
+	probemanager.cc
 	property.cc
 	propertyref.cc
 	rangeposprovider.cc
@@ -81,7 +84,6 @@ list ( APPEND OD_MODULE_SOURCES
 	saveable.cc
 	stratlevel.cc
 	survgeometrytransl.cc
-	surveysectionprinfo.cc
 	tableascio.cc
 	tableconv.cc
 	transl.cc
