--- a/src/AttributeEngine/CMakeLists.txt
+++ b/src/AttributeEngine/CMakeLists.txt
@@ -20,7 +20,7 @@ set(OD_MODULE_SOURCES
 		attribparambase.cc
 		attribposvecoutput.cc
 		attribprocessor.cc
-		attribpresentationinfo.cc
+		attribprobelayer.cc
 		attribprovider.cc
 		attribsel.cc
 		attribslice.cc
