SEG-Y: First step of JIRA 1263: reinstating the classic survey setup wizard For now, added to uiSurvInfoProvider's if OD_SEGY_CLASSIC_TOPLEVEL set.

--- a/plugins/uiSEGY/CMakeLists.txt
+++ b/plugins/uiSEGY/CMakeLists.txt
@@ -28,6 +28,7 @@ set(OD_MODULE_SOURCES
     uisegyreadstarter.cc
     uisegyreadstartinfo.cc
     uisegysip.cc
+    uisegysipclassic.cc
     uisegytrchdrvalplot.cc
     uisegywriteopts.cc
     uiwellimpsegyvsp.cc
