od: OD-1188, Reworking of uiMultiWellLogSel
Summary: The inheritance of the uiMultiWellLogSel was wrong and is now corrected. Along with this well log-interpolator algorithm has been used.

Test Plan: The test are done in F3Demo2015 survey and seems to be working fine.

Reviewers: raman

Reviewed By: raman

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D10971

--- a/src/uiWell/CMakeLists.txt
+++ b/src/uiWell/CMakeLists.txt
@@ -18,6 +18,7 @@ set(OD_MODULE_SOURCES
 		uiwelldisplaycontrol.cc
 		uiwelldisplaymarkeredit.cc
 		uiwelldlgs.cc
+		uiwellextractparams.cc
 		uiwellimpasc.cc
 		uiwelllogcalc.cc
 		uiwelllogimpexp.cc
