sketch of new Seis::Provider class compiles but not implemented and doesn't work

--- a/src/Seis/CMakeLists.txt
+++ b/src/Seis/CMakeLists.txt
@@ -53,6 +53,7 @@ set(OD_MODULE_SOURCES
 	seisparallelreader.cc
 	seisposindexer.cc
 	seispreload.cc
+	seisprovider.cc
 	seispsioprov.cc
 	seispsmerge.cc
 	seisrandlineto2d.cc
