od: Added dependency of General to od_helpid target to ensure the help id file gets copied into include/General when building the General target (not only when running the All_BUILD target)

--- a/src/General/CMakeLists.txt
+++ b/src/General/CMakeLists.txt
@@ -108,3 +108,5 @@ if ( CMAKE_COMPILER_IS_GNUCC )
 endif ( CMAKE_COMPILER_IS_GNUCC )
 
 OD_INIT_MODULE()
+
+add_dependencies( ${OD_MODULE_NAME} od_helpid )
