--- a/src/Seis/CMakeLists.txt
+++ b/src/Seis/CMakeLists.txt
@@ -7,7 +7,7 @@
 
 set(OD_MODULE_DEPS Geometry MMProc )
 
-set ( OD_TEST_PROGS seisbuf.cc seiskeytracker.cc )
+set ( OD_TEST_PROGS seisbuf.cc seiskeytracker.cc provider.cc )
 
 set(OD_MODULE_SOURCES
 	initseis.cc
