od: Added per-component scaler to the VolumeDataPack readers
Summary:
as discussed with Kristofer. We want to scale values as soon as possible between storage UoM and usage UoM. Thus added the required scaler, which must be per component (inline dip requires different scaling than crossline dip because of bin size for instance). Also made a base class to regroup all the stuff common to the three reader classes.
Implements the reader part of OD-1369.

Test Plan: tested from volume builder chain, but also the 2D/3D pre-load from survey menu.

Reviewers: bert

Reviewed By: bert

Subscribers: kristofer

Differential Revision: https://phabricator.dgbes.com:8443/D11161

--- a/src/Seis/CMakeLists.txt
+++ b/src/Seis/CMakeLists.txt
@@ -47,9 +47,9 @@ set(OD_MODULE_SOURCES
 	seisiosimple.cc
 	seisjobexecprov.cc
 	seiskeytracker.cc
+	seisloader.cc
 	seismerge.cc
 	seismulticubeps.cc
-	seisparallelreader.cc
 	seisposindexer.cc
 	seispreload.cc
 	seisprovider.cc
