Seis::Provier: Implemented (but not tested) PS3DProvider

--- a/src/Seis/CMakeLists.txt
+++ b/src/Seis/CMakeLists.txt
@@ -7,7 +7,7 @@
 
 set(OD_MODULE_DEPS Geometry MMProc )
 
-set ( OD_TEST_PROGS seisbuf.cc seiskeytracker.cc provider.cc )
+set ( OD_TEST_PROGS seisbuf.cc seiskeytracker.cc seisprovider.cc )
 
 set(OD_MODULE_SOURCES
 	initseis.cc
@@ -54,6 +54,7 @@ set(OD_MODULE_SOURCES
 	seisposindexer.cc
 	seispreload.cc
 	seisprovider.cc
+	seisps3dprovider.cc
 	seispsioprov.cc
 	seispsmerge.cc
 	seisrandlineto2d.cc
