To avoid CDash probs, added seisps2dprovider.cc to CMakeLists.txt and made it compile

--- a/src/Seis/CMakeLists.txt
+++ b/src/Seis/CMakeLists.txt
@@ -54,6 +54,7 @@ set(OD_MODULE_SOURCES
 	seisposindexer.cc
 	seispreload.cc
 	seisprovider.cc
+	seisps2dprovider.cc
 	seisps3dprovider.cc
 	seispsioprov.cc
 	seispsmerge.cc
