Added Seis::LineProvider Renamed 'Fetcher' to 'Getter' in existing code

--- a/src/Seis/CMakeLists.txt
+++ b/src/Seis/CMakeLists.txt
@@ -48,6 +48,7 @@ set(OD_MODULE_SOURCES
 	seisiosimple.cc
 	seisjobexecprov.cc
 	seiskeytracker.cc
+	seislineprovider.cc
 	seisloader.cc
 	seismerge.cc
 	seismulticubeps.cc
