od: OD-1451, Displaying multiple markers in synthetic data
Summary: The current fix displays multiple markers perfectly in both flattened and non flattened scene in stochastic model and profile model.

Test Plan: Tested using stochastic and profile model build in F3_Demo_2012. Models were build and multiple markers were displayed without a crash. Markers are been added and removed smoothly

Reviewers: satyaki

Reviewed By: satyaki

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D11280

--- a/src/WellAttrib/CMakeLists.txt
+++ b/src/WellAttrib/CMakeLists.txt
@@ -13,6 +13,7 @@ set(OD_MODULE_SOURCES
 		stratseisevent.cc
 		stratsynth.cc
 		stratsynthexp.cc
+		stratsynthlevelset.cc
 		wellhorpos.cc
 		welllogattrib.cc
 		welltiecshot.cc
