--- a/src/uiODMain/CMakeLists.txt
+++ b/src/uiODMain/CMakeLists.txt
@@ -45,6 +45,7 @@ set(OD_MODULE_SOURCES
 	uiodrandlinetreeitem.cc
 	uiodbodydisplaytreeitem.cc
 	uiodseis2dtreeitem.cc
+	uiodsynth.cc
 	uiodviewer2d.cc
 	uiodviewer2dmgr.cc
 	uiodviewer2dposgrp.cc
