od: Created unified interface for selecting a constant velocity value.
Summary: see D11323. Parly fixed OD-1328.

Test Plan: tested in various surveys these interfaces.

Reviewers: helene

Reviewed By: helene

Differential Revision: https://phabricator.dgbes.com:8443/D11337

--- a/src/uiTools/CMakeLists.txt
+++ b/src/uiTools/CMakeLists.txt
@@ -29,6 +29,7 @@ set( OD_MODULE_SOURCES
 	uicoltabmarker.cc
 	uicoltabtools.cc
 	uicompparsel.cc
+	uiconstvel.cc
 	uidirectionalplot.cc
 	uidlggroup.cc
 	uifileinput.cc
