od_em: First working copy of autosaveable FaultStickSets
Summary: same as title

Test Plan: auto save seems to work

Reviewers: raman

Reviewed By: raman

Differential Revision: https://phabricator.dgbes.com:8443/D11301

--- a/src/uiEarthModel/CMakeLists.txt
+++ b/src/uiEarthModel/CMakeLists.txt
@@ -35,6 +35,7 @@ set(OD_MODULE_SOURCES
 	uiiosurface.cc
 	uiiosurfacedlg.cc
 	uimultisurfaceread.cc
+	uinewemobjdlg.cc
 	uirandlinegen.cc
 	uisurfaceman.cc
 	uisurfaceposprov.cc
