--- a/src/uiBase/CMakeLists.txt
+++ b/src/uiBase/CMakeLists.txt
@@ -6,7 +6,7 @@
 
 set(OD_MODULE_DEPS Network )
 set(OD_USEQT Widgets PrintSupport)
-set(OD_TEST_PROGS  )
+set(OD_TEST_PROGS uigraphicsview.cc )
 set(QT_MOC_HEADERS
 	i_qaction.h
 	i_qbutton.h
